# test-zeromq-c-

./: .cache_ggshield  .gitguardian.yaml  .gitignore  404.html  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CORRECCION_NORMALIZACION_COMPLETADA.md  DEBT-COMPILER-WARNINGS-CLEANUP-001.md  DECISIONS.md  Dockerfile.service1  Dockerfile.service2  Dockerfile.service3  Estrategia para el sniffer c++20 kernel 6.11 o superior.md  Estrategia para el sniffer c++20 kernel 6.11 o superior.txt  Estructura del Proyecto C++20 Sniffer.md  FIREWALL_INTEGRATION_GUIDE.md  Firewall integration executive summary.md  Jenkinsfile  LICENSE.txt  ML Defender - Day 10 Multi-Agent Collaboration Report.md  ML Defender - Day 11 ChatGPT Hospital Stress Test Spec V1.md  Makefile  Makefile.backup  Makefile.bak2  Makefile.debian  PROMPT_CONTINUE.md  PROMPT_CONTINUE_CLAUDE.md  PROMPT_CONTINUE_DAY2.md  PROMPT_CONTINUE_DS.md  PROMP_CONTINUE_GEMINI.md  README.debian.md  README.md  README_GATEWAY.md  ROADMAP.md  STATUS.md  TESTING.md  Turbo-Charge DDoS Detection_ Retraining Random Forests with High-Fidelity Synthetic Traffic copia.md  (+60 more)
common-rag-ingester/: CMakeLists.txt  README.md
common-rag-ingester/cmake/: common-rag-ingester-config.cmake.in
common-rag-ingester/include/: dimensionality_reducer.hpp
common-rag-ingester/src/: dimensionality_reducer.cpp
contrib/safe-path/: CMakeLists.txt  README.md
crypto-transport/: CMakeLists.txt  README.md
crypto-transport/src/: compression.cpp  crypto.cpp  transport.cpp  utils.cpp
crypto-transport/tests/: CMakeLists.txt  test_compression.cpp  test_crypto.cpp  test_crypto_transport.cpp  test_integ_contexts.cpp  test_integration.cpp
etcd-client/: .gitignore  CMakeLists.txt  README.md
etcd-client/config/: etcd_client_config.json
etcd-client/src/: component_registration.cpp  config_loader.cpp  etcd_client.cpp  etcd_client.cpp.day54_broken  etcd_client_simple.cpp  fix_assignments.sh  http_client.cpp
etcd-client/tests/: CMakeLists.txt  test_compression.cpp  test_encryption.cpp  test_etcd_client_hmac_grace_period.cpp  test_hmac_client.cpp  test_hmac_integration_client.cpp  test_pipeline.cpp  test_put_config_integration.cpp  test_service_discovery.cpp
etcd-server/: CMakeLists.txt  CMakeLists_hardening.patch  Makefile  build
etcd-server/build-debug/: Makefile  cmake_install.cmake
etcd-server/build-tsan/: Makefile  cmake_install.cmake
etcd-server/config/: etcd-server.json  firewall-acl-agent.service  install-systemd-units.sh  ml-defender-etcd-server.service  ml-defender-firewall-acl-agent.service  ml-defender-ml-detector.service  ml-defender-rag-ingester.service  ml-defender-rag-security.service  ml-defender-restart  ml-defender-sniffer.service  ml-detector.service  set-build-profile.sh  sniffer.service
etcd-server/src/: component_registry.cpp  compression_lz4.cpp  crypto_manager.cpp  etcd_server.cpp  main.cpp  secrets_manager.cpp
etcd-server/tests/: test_hmac_integration.cpp  test_secrets_manager.cpp  test_secrets_manager_grace_period.cpp  test_secrets_manager_simple.cpp
firewall-acl-agent/: CMakeLists.txt  Makefile  README.md  analyze_stress_test_results.sh  apply_fixes.sh  diagnose.sh  monitor_firewall_logs.sh  test_simple.cpp  verify_day50_integration.sh
firewall-acl-agent/build-debug/: CTestTestfile.cmake  Makefile  cmake_install.cmake  firewall_tests[1]_include.cmake  firewall_tests[1]_tests.cmake
firewall-acl-agent/config/: firewall.json
firewall-acl-agent/docs/: BACKLOG.md  DESIGN_DECISIONS.md  IPTABLES_WRAPPER_SUMMARY.md  PERFORMANCE_METRICS.md  README_DOCUMENTATION.md
firewall-acl-agent/fuzz/: fuzz_validate_chain  fuzz_validate_chain.cpp  fuzz_validate_filepath.cpp
firewall-acl-agent/include/: crash_diagnostics.hpp  crash_diagnostics.hpp.broken  firewall_observability_logger.hpp  firewall_observability_logger.hpp.broken
firewall-acl-agent/src/: main.cpp
firewall-acl-agent/tests/: test_auto_isolate.cpp  test_globals_stub.cpp
libs/seed-client/: CMakeLists.txt
ml-detector/: CMakeLists.txt  CMakeLists_detector_only.txt  RANSOMWARE_DETECTOR_SUCCESS.md  README.md  compile_test.sh
ml-detector/build-asan/: CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  config
ml-detector/build-debug/: CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  models
ml-detector/build-tsan/: CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
ml-detector/build_detector_test/: test_unit
ml-detector/config/: ml_detector.json  ml_detector_config.json  rag_logger_config.json
ml-detector/docs/: feature_schema.md
ml-detector/include/: config_loader.hpp  csv_event_writer.hpp  etcd_client.hpp  feature_extractor.hpp  logger.hpp  memory_utils.hpp  onnx_model.hpp  rag_logger.hpp  zmq_handler.hpp
ml-detector/src/: classifier_tricapa.cpp  config_loader.cpp  contract_validator.cpp  contract_validator.h  csv_event_writer.cpp  ddos_detector.cpp  etcd_client.cpp  feature_extractor.cpp  forest_trees_inline.hpp  internal_detector.cpp  logger.cpp  main.cpp  onnx_model.cpp  rag_logger.cpp  rag_logger.cpp.v2_backup  ransomware_detector.cpp  traffic_detector.cpp  zmq_handler.cpp
ml-detector/tests/: CMakeLists.txt
plugin-loader/: CMakeLists.txt
plugin-loader/src/: plugin_loader.cpp
plugin-loader/tests/: CMakeLists.txt  test_invoke_all.cpp
plugins/hello/: CMakeLists.txt  hello_plugin.cpp
plugins/test-message/: CMakeLists.txt  (+9 more)
rag/: BACKLOG_OPTIMIZATIONS.md  CMakeLists.txt  Makefile  README.md  STATUS.md  TESTING.md  start.sh
rag-ingester/: .gitignore  CMakeLists.txt  README.md  build
service3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
sniffer/: .deps-installed  .gitignore  BACKLOG_OPTIMIZATIONS.md  CMakeLists.txt  Makefile  README.md  STATUS.md  TESTING.md
tools/: CMakeLists.txt  apparmor-promote.sh  build  check-json-plugins.py  check-xgboost-version.sh  extract-pubkey-hex.sh  generate_synthetic_events.cpp  provision.sh  sign-model.sh  synthetic_ml_output_injector.cpp  synthetic_sniffer_injector.cpp  update-readme-day141.py
(+2202 files in other folders)
